k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql  
spec:  
  serviceName: mysql-h
  #podManagementPolicy: Parallel => cria as replicas em paralelo e não sequencial
  replicas: 3
  selector: 
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
