k8s/mysql-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h #nome deve ser igual ao serviceName do statefulset.yaml
spec:
  selector:
    app: mysql  
  ports:  
    - port: 3306  
  clusterIP: None #Service sabe que não vai trabalhar com IP e sim com DNS
