k8s/service -NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 80    
    targetPort: 8080
    protocol: TCP
    nodePort: 30001 #entre a porta 30.000 a 32.767
